--- a/src/index.css
+++ b/src/index.css
@@ -5,9 +5,30 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #D2F3D1 ;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.header {
+  display:flex;
+  justify-content:flex-start;
+  padding: 5px;
+  background-color: #036A00;
+  align-items:flex-start;
+  color: white;
+}
+
+.logo {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+
+.categories {
+  display: flex;
+  flex-direction: column;
+  float: left;
 }
