--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #D2F3D1 ;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
 }
 
 code {
@@ -21,10 +24,13 @@ code {
   align-items:flex-start;
   color: white;
   align-items: center;
+  top: 0;
+  position: fixed;
+  width: 100%;
 }
 
 .logo {
-  margin-left: 20px;
+  margin-left: 5px;
   margin-right: 20px;
 }
 
@@ -32,4 +38,46 @@ code {
   display: flex;
   flex-direction: column;
   float: left;
+  max-width: 230px;
+  position: fixed;
+  margin-top: -50px;
+  background-color: #036A00;
+  padding-bottom: 500px;
+  padding-right: 7px;
+}
+
+.searchInput {
+  margin-left: 180px;
+  margin-top: -65px;
+  position: fixed ;
+  background-color:#036A00;
+  width:325px;
+  height: 40px;
+  border-radius: 10px ;
+  padding-left: 20px;
+  padding-top: 13px;
+}
+
+.resultadoBusca {
+  margin-left: 240px;
+  margin-top: 150px;
+  padding-top: 20px;
+}
+
+.notProductFound {
+  margin-top: 150px;
+  font-size: 1px;
+}
+
+.searchButton {
+  background-color: #4CAF50;
+  border: none;
+  color: white;
+  padding: 3px 15px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  border-radius: 8px;
+  margin-left: 10px;
 }
