--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -9,9 +9,9 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: flex-start;
-}
+} */
 
-code {
+/* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
@@ -27,9 +27,9 @@ code {
   top: 0;
   position: fixed;
   width: 100%;
-}
+} */
 
-.logo {
+/* .logo {
   margin-left: 5px;
   margin-right: 20px;
 }
@@ -80,4 +80,4 @@ code {
   font-size: 16px;
   border-radius: 8px;
   margin-left: 10px;
-}
+} */
