--- a/src/styles/ProductCard.css
+++ b/src/styles/ProductCard.css
@@ -7,8 +7,11 @@
   flex-direction: column;
   height: 380px;
   justify-content: center;
-  margin: 10px;
-  padding-bottom: 10px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 40px;
+  padding-top: 20px;
   width: 280px;
 }
 
