--- a/src/styles/ProductDetail.css
+++ b/src/styles/ProductDetail.css
@@ -1,1 +1,37 @@
-/* de */
+.productDetails {
+  align-items: center;
+  background-color: white;
+  border-radius: 5px;
+  box-shadow: 0 3px 6px #00000029;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  margin: auto;
+  margin-top: 50px;
+  width: fit-content;
+}
+
+img {
+  height: auto;
+  margin: 10px;
+  width: 300px;
+}
+
+h1 {
+  color: #333;
+  font-size: 30px;
+  margin: 0;
+  padding: 20px;
+}
+
+h3 {
+  color: #333;
+  font-size: 20px;
+  margin: 0;
+  padding: 10px;
+}
+
+.button-div {
+  margin: 10px;
+  padding: 10px;
+}
